# hachi

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  importance.py  importances.txt  model.ubj  out.txt  out2.txt  requirements.txt  test.py
bots/: CMakeLists.txt  bot_board.hpp  bot_piece.hpp  comboer.cpp  comboer.hpp  downstacker.cpp  downstacker.hpp
bots/test/: test.cpp
bots/util/: bot_board.hpp  bot_piece.hpp  movegen.cpp  movegen.hpp  rng.hpp
features/: Cargo.toml  build.rs
features/src/: arrow.rs  feature_extractor.rs  game.rs  hachi.rs  hachi_features.rs  lib.rs  main.rs
hachi/: Cargo.toml
hachi/src/: bot.rs  main.rs
models/: mini_model.ubj  model.ubj  td_model.ubj
src/: arrow.rs  attribute_finder.rs  feature_extractor.rs  game.rs  hachi.rs  main.rs  static_features.rs  whitelist.rs
train/: data.py  distill.py  importance.py  infer.py  model.py  perf.py  requirements.txt  schema.sql  td_lambda.py  test.py  to_onnx.py  top100.py  train.py  upstill.py  validate_onnx.py  view_predictions.py  visualise.py  xgb.py
