[package]
name = "hachi"
version = "0.1.0"
edition = "2024"

[dependencies]
tetris = { git = "https://github.com/citrus610/sunbeam", rev = "bcf64cd" }
derive-sql = "0.13"
derive-sql-statement = "0.12"
struct_iterable = "0.1.1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
itertools = "0.12"